--- a/src/style/media-queries/bugs/report-bug-form-mq.scss
+++ b/src/style/media-queries/bugs/report-bug-form-mq.scss
@@ -3,6 +3,10 @@
         height: 100%;
         width: 90vw;
 
+        .bug-form__form {
+            width: 100%;
+        }
+
         .bug-form__input-group {
             justify-self: center;
             align-self: center;
