--- a/src/style/media-queries/user/update-user-password-mq.scss
+++ b/src/style/media-queries/user/update-user-password-mq.scss
@@ -2,4 +2,9 @@
     .update-password {
         width: 90vw;
     }
+
+    .user-profile__modal-failure{
+        font-size: 0.8em;
+        
+    }
 }
