--- a/src/style/user/user-profile.scss
+++ b/src/style/user/user-profile.scss
@@ -1,12 +1,12 @@
 .user-profile__modal-success{
     text-align: center;
-    font-size: 2em;
+    font-size: 1.5em;
     color: $white;
 }
 
 .user-profile__modal-failure{
     text-align: center;
-    font-size: 2em;
+    font-size: 1.5em;
     color: $red;
 }
 
